sync: auto commit and push
